--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	
 	<div class="container">
+		<dive class="backgroundImage"></dive>
 	<img src="assets/img/cat.jpg" alt="">
 	<h1>Website Template</h1>
 	
